# FastcvDemo

./: .gitignore  README.md  import-summary.txt
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/include/apis/: About.h  Android.mk
app/src/main/cpp/include/apis/featureDetection/: Android.mk  Corner.h
app/src/main/cpp/include/apis/imageProcessing/: Android.mk  FilterCorr.h  ImgDiff.h
app/src/main/cpp/include/apis/imageTransformation/: Affine.cpp  Android.mk  Rotate.h
app/src/main/cpp/include/utils/: Android.mk  CameraRendererRGB565GL2.h
app/src/main/cpp/source/: CMakeLists.txt
app/src/main/cpp/source/apis/: About.cpp  CMakeLists.txt
app/src/main/cpp/source/apis/featureDetection/: CMakeLists.txt  Corner.cpp
app/src/main/cpp/source/apis/imageProcessing/: CMakeLists.txt  Filter.cpp  ImageGradient.cpp  ImgDiff.cpp
app/src/main/cpp/source/apis/imageTransformation/: CMakeLists.txt  Scale.cpp  Warp.cpp
app/src/main/cpp/source/utils/: CMakeLists.txt  CameraUtil.cpp
app/src/main/java/com/qualcomm/fastcvdemo/apis/: About.java  FastCVMainMenu.java  SplashScreen.java  SplashScreenView.java
app/src/main/java/com/qualcomm/fastcvdemo/apis/featureDetection/: Corner.java  CornerPrefs.java
app/src/main/java/com/qualcomm/fastcvdemo/apis/imageProcessing/: Filter.java  FilterCorr.java  ImageGradient.java  ImgDiff.java
app/src/main/java/com/qualcomm/fastcvdemo/apis/imageTransformation/: Affine.java  Rotate.java  Scale.java  ScaleDownMN.java  Warp.java
app/src/main/java/com/qualcomm/fastcvdemo/base/: GraphicalActivity.java
app/src/main/java/com/qualcomm/fastcvdemo/utils/: CameraSurface.java  FastCVSampleRenderer.java  FastCVUtil.java
app/src/main/jni/: Android.mk
app/src/main/jni/apis/imageProcessing/: Filter.h  FilterCorr.cpp  ImageGradient.h
app/src/main/jni/apis/imageTransformation/: Affine.h  Rotate.cpp  Scale.h  ScaleDownMN.cpp  ScaleDownMN.h  Warp.h
app/src/main/jni/utils/: CameraRendererRGB565GL2.cpp  CameraUtil.h  FPSCounter.cpp  FPSCounter.h  FastCVSampleRenderer.cpp  FastCVSampleRenderer.h  FastCVUtil.cpp  FastCVUtil.h
app/src/main/res/drawable/: diff_reset_button.xml  start_stop_button.xml
app/src/main/res/layout/: about.xml  cornerpref.xml  imagegradient.xml  imgdiff.xml  main.xml  scaledown_mn.xml
app/src/main/res/menu/: affinemenu.xml  filtercorrmenu.xml  filtermenu.xml  imagegradientmenu.xml  menu.xml  rotatemenu.xml  scaledown_mn_menu.xml  scalemenu.xml  splashmenu.xml  warpmenu.xml
app/src/main/res/values/: strings.xml
